resource-manifests/multicloud/coit-backend1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coit-backend1
  labels:
    app: coit-backend1
spec:
  selector:
    matchLabels:
      app: coit-backend1
  replicas: 3
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: coit-backend1
    spec:
      containers:
      - image: shebin512/coit-backend1:latest
        imagePullPolicy: IfNotPresent
        name: coit-backend1
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
