resource-manifests/multicloud/coit-backend2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coit-backend2
  labels:
    app: coit-backend2
spec:
  selector:
     matchLabels:
       app: coit-backend2
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: coit-backend2
    spec:
      containers:
        - image: shebin512/coit-backend2:latest
          imagePullPolicy: IfNotPresent
          name: coit-backend2
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
