resource-manifests/multicloud/ingress-coit-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /sentiment
            pathType: Prefix
            backend:
              service:
                name: coit-backend1-lb
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: coit-frontend-lb
                port:
                  number: 80
